--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     },
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/zoh/chai-object.git"
     },
     "license": "MIT",
     "readmeFilename": "README.md"
